# maira-2

./: .gitignore  README.md  pyproject.toml  requirements-evaluation.txt  requirements.txt
.github/: copilot-instructions.md
src/: benchmark_log.txt  benchmark_performance.py  check_gpu.py  test_all.py  test_findings_generation.py  test_grounded_generation.py  test_phrase_grounding.py  utils.py
src/benchmark_results/: benchmark_summary.txt
src/evaluation/: __init__.py  dataset.py  dataset_translation.py  run_evaluation.py  runner.py  test_translation.py
src/evaluation/examples/: __init__.py  cross_lingual_evaluation.py  standalone_metrics.py
src/evaluation/metrics/: __init__.py  base.py  clinical_metrics.py  nlg_metrics.py  semantic_metrics.py
src/translation/: __init__.py  nllb_translator.py
